header z-index fix

--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -33,6 +33,7 @@ header {
     top: 0;
     left: 0;
     right: 0;
+    z-index: 10;
     padding: 20px 0;
     box-shadow: 0 2px 2px rgba(20,20,20,.15);
     .logo {
